--- a/css/style.css
+++ b/css/style.css
@@ -577,6 +577,43 @@ body {
     opacity: 1;
 }
 
+/************************ 回到頂部按鈕樣式 *******************************/
+#back-to-top {
+    position: fixed !important;
+    bottom: 30px;
+    right: 30px;
+    width: 60px;
+    height: 60px;
+    background-color: #D64535;
+    border:none;
+    border-radius: 50%;
+    z-index: 9999; /* 絕對最高層級 */
+    cursor: pointer;
+    display: flex; /* 這裡必須是 flex 才能顯示內容 */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    /* 初始狀態由 JS 控制 */
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+}
+
+.arrow-up {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    width: 0; 
+    height: 0; 
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 20px solid white;
+}
+
+/************************ 回到頂部按鈕樣式結束 *******************************/
+
+
 
 
 
